[package]
name = "pg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26"
env_logger = "0.9"
log = "0.4"
wgpu = "0.13.1"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
imgui = "0.8"
imgui-wgpu = "0.20"
imgui-winit-support = { version = "0.8", default-features = false, features = ["winit-26"] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
